2004-03-28  Douglas Bates  <bates@bates2_home>

	* src/ssclme.c (ssclme_fitted): Added function.

2004-03-27  Douglas Bates  <bates@bates2_home>

	* src/ssclme.c (ssclme_transfer_dimnames): Add new function to
	store the dimnames in the XtX and bVar slots
	(ssclme_update_mm): Change the dimensions of the bVar slot
	components and the returned value from ssclme_ranef.

2004-03-18  Douglas Bates  <bates@stat.wisc.edu>

	* R/{pdMat.R,pdIdent.R,pdLogChol.R,pdMatrixLog.R,pdNatural.R},
	  src/{pdMat.c,pdIdent.c,pdLogChol.c,pdNatural.c},
	  tests/{pdCompSymm.R,pdDiag.R,pdIdent.R,pdLogChol.R,pdNatural.R},
	  man/{pdMat-class.Rd,pdmatrix-class.Rd,corrmatrix-class.Rd,
	  pdDiag-class.Rd,pdIdent-class.Rd,pdNatural-class.Rd,
	  pdLogChol-class.Rd,coefGets.Rd,pdCompSymm-class.Rd,
	  pdfactor-class.Rd,pdFactor.Rd,pdMatrix.Rd,
	  pdBlocked-class.Rd},AllClass.R,AllGeneric.R:
	Moved the pdMat classes from the lme4 package.

2004-03-02  Douglas Bates  <bates@stat.wisc.edu>

	* man/ssclme-class.Rd: Update definition and documentation of the
	ssclme class to include the DIsqrt slot.

	* src/ssclme.c (ssclme_deviance): Modify order of computation
	(much faster using dsyrk, a level 3 BLAS routine).

	* src/Makefile (SUBLIBS): Change definition (K. Hornik)

2004-02-28  Douglas Bates  <bates@stat.wisc.edu>

	* tests/ssclme.R: Modify the test to account for the permutation
	of the levels of the grouping factors.

2004-02-23  Douglas Bates  <bates@stat.wisc.edu>

	* R/ssclme.R,src/ssclme.c (ssclme): Move slots of sscCrosstab slot
	directly into the ssclme class definition.

2004-02-22  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Date): New release

	* man/ssclme-class.Rd: new file.

	* src/ssclme.c (ssclme_loglik): major revisions in design.  It
	works and it's fast!

2004-02-17  Douglas Bates  <bates@stat.wisc.edu>

	* src/taucs/Makefile.win (lib): Change "ar" to "$(AR)" (B.Ripley)

2004-02-16  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Date): New release
