@@ -1,3 +1,7 @@
+2004-04-04  Douglas Bates  <bates@bates2_home>
+
+	* src/ssclme.c (ssclme_variances): New function.
+
 2004-03-28  Douglas Bates  <bates@bates2_home>
 
 	* src/ssclme.c (ssclme_fitted): Added function.
